Lex+Syntax Analysis/y.output
Terminals unused in grammar

   PTR_OP
   TYPEDEF
   EXTERN
   STATIC
   AUTO
   REGISTER
   CONST
   VOLATILE
   STRUCT
   UNION
   ENUM
   CASE
   DEFAULT
   SWITCH
   GOTO
   CONTINUE
   BREAK
   T_cin


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | CONSTANT
    3                   | STRING_LITERAL
    4                   | '(' expression ')'

    5 postfix_expression: primary_expression
    6                   | postfix_expression '[' expression ']'
    7                   | postfix_expression '(' ')'
    8                   | postfix_expression '(' argument_expression_list ')'
    9                   | postfix_expression '.' IDENTIFIER
   10                   | postfix_expression INC_OP
   11                   | postfix_expression DEC_OP

   12 argument_expression_list: assignment_expression
   13                         | argument_expression_list ',' assignment_expression

   14 unary_expression: postfix_expression
   15                 | INC_OP unary_expression
   16                 | DEC_OP unary_expression
   17                 | unary_operator unary_expression
   18                 | SIZEOF unary_expression
   19                 | SIZEOF '(' type_name ')'

   20 unary_operator: '&'
   21               | '*'
   22               | '+'
   23               | '-'
   24               | '~'
   25               | '!'

   26 multiplicative_expression: unary_expression
   27                          | multiplicative_expression '*' unary_expression
   28                          | multiplicative_expression '/' unary_expression
   29                          | multiplicative_expression '%' unary_expression

   30 additive_expression: multiplicative_expression
   31                    | additive_expression '+' multiplicative_expression
   32                    | additive_expression '-' multiplicative_expression

   33 shift_expression: additive_expression
   34                 | shift_expression LEFT_OP additive_expression
   35                 | shift_expression RIGHT_OP additive_expression

   36 relational_expression: shift_expression
   37                      | relational_expression '<' shift_expression
   38                      | relational_expression '>' shift_expression
   39                      | relational_expression LE_OP shift_expression
   40                      | relational_expression GE_OP shift_expression

   41 equality_expression: relational_expression
   42                    | equality_expression EQ_OP relational_expression
   43                    | equality_expression NE_OP relational_expression

   44 and_expression: equality_expression
   45               | and_expression '&' equality_expression

   46 exclusive_or_expression: and_expression
   47                        | exclusive_or_expression '^' and_expression

   48 inclusive_or_expression: exclusive_or_expression
   49                        | inclusive_or_expression '|' exclusive_or_expression

   50 logical_and_expression: inclusive_or_expression
   51                       | logical_and_expression AND_OP inclusive_or_expression

   52 logical_or_expression: logical_and_expression
   53                      | logical_or_expression OR_OP logical_and_expression

   54 conditional_expression: logical_or_expression
   55                       | logical_or_expression '?' expression ':' conditional_expression

   56 assignment_expression: conditional_expression
   57                      | unary_expression assignment_operator assignment_expression

   58 assignment_operator: '='
   59                    | MUL_ASSIGN
   60                    | DIV_ASSIGN
   61                    | MOD_ASSIGN
   62                    | ADD_ASSIGN
   63                    | SUB_ASSIGN
   64                    | LEFT_ASSIGN
   65                    | RIGHT_ASSIGN
   66                    | AND_ASSIGN
   67                    | XOR_ASSIGN
   68                    | OR_ASSIGN

   69 expression: assignment_expression
   70           | expression ',' assignment_expression

   71 constant_expression: conditional_expression

   72 declaration: declaration_specifiers ';'
   73            | declaration_specifiers init_declarator_list ';'

   74 declaration_specifiers: type_specifier
   75                       | type_specifier declaration_specifiers

   76 init_declarator_list: init_declarator
   77                     | init_declarator_list ',' init_declarator

   78 init_declarator: declarator
   79                | declarator '=' initializer
   80                | error

   81 type_specifier: VOID
   82               | CHAR
   83               | SHORT
   84               | INT
   85               | LONG
   86               | FLOAT
   87               | DOUBLE
   88               | SIGNED
   89               | UNSIGNED
   90               | TYPE_NAME

   91 specifier_qualifier_list: type_specifier specifier_qualifier_list
   92                         | type_specifier

   93 declarator: direct_declarator

   94 direct_declarator: IDENTIFIER
   95                  | '(' declarator ')'
   96                  | direct_declarator '[' constant_expression ']'
   97                  | direct_declarator '[' ']'
   98                  | direct_declarator '(' parameter_type_list ')'
   99                  | direct_declarator '(' identifier_list ')'
  100                  | direct_declarator '(' ')'

  101 parameter_type_list: parameter_list
  102                    | parameter_list ',' ELLIPSIS

  103 parameter_list: parameter_declaration
  104               | parameter_list ',' parameter_declaration

  105 parameter_declaration: declaration_specifiers declarator
  106                      | declaration_specifiers

  107 identifier_list: IDENTIFIER
  108                | identifier_list ',' IDENTIFIER

  109 type_name: specifier_qualifier_list

  110 initializer: assignment_expression
  111            | '{' initializer_list '}'
  112            | '{' initializer_list ',' '}'

  113 initializer_list: initializer
  114                 | initializer_list ',' initializer

  115 statement: compound_statement
  116          | expression_statement
  117          | selection_statement
  118          | iteration_statement
  119          | jump_statement
  120          | print_statement
  121          | scan_statement

  122 print_statement: T_printf '(' STRING_LITERAL ')'
  123                | T_printf '(' STRING_LITERAL ',' identifier_list ')'
  124                | T_cout

  125 scan_statement: T_scanf '(' STRING_LITERAL ')'
  126               | T_scanf '(' STRING_LITERAL ',' identifier_list ')'

  127 $@1: %empty

  128 compound_statement: '{' $@1 temp1

  129 temp1: '}'
  130      | statement_list '}'
  131      | declaration_list '}'
  132      | declaration_list statement_list '}'
  133      | statement_list declaration_list '}'
  134      | statement_list declaration_list statement_list '}'
  135      | declaration_list statement_list declaration_list '}'
  136      | declaration_list statement_list declaration_list statement_list '}'

  137 declaration_list: declaration
  138                 | declaration_list declaration

  139 statement_list: statement
  140               | statement_list statement

  141 expression_statement: ';'
  142                     | expression ';'

  143 for_expression_statement: ';'
  144                         | expression ';'
  145                         | declaration

  146 selection_statement: IF '(' expression ')' statement
  147                    | IF '(' expression ')' statement ELSE statement

  148 iteration_statement: WHILE '(' expression ')' statement
  149                    | DO statement WHILE '(' expression ')' ';'

  150 $@2: %empty

  151 iteration_statement: FOR $@2 temp2

  152 temp2: '(' for_expression_statement expression_statement ')' statement
  153      | '(' for_expression_statement expression_statement expression ')' statement

  154 jump_statement: RETURN ';'
  155               | RETURN expression ';'

  156 translation_unit: external_declaration
  157                 | translation_unit external_declaration
  158                 | error

  159 external_declaration: function_definition
  160                     | declaration

  161 function_definition: declaration_specifiers declarator declaration_list compound_statement
  162                    | declaration_specifiers declarator compound_statement
  163                    | declarator declaration_list compound_statement
  164                    | declarator compound_statement


Terminals, with rules where they appear

$end (0) 0
'!' (33) 25
'%' (37) 29
'&' (38) 20 45
'(' (40) 4 7 8 19 95 98 99 100 122 123 125 126 146 147 148 149 152
    153
')' (41) 4 7 8 19 95 98 99 100 122 123 125 126 146 147 148 149 152
    153
'*' (42) 21 27
'+' (43) 22 31
',' (44) 13 70 77 102 104 108 112 114 123 126
'-' (45) 23 32
'.' (46) 9
'/' (47) 28
':' (58) 55
';' (59) 72 73 141 142 143 144 149 154 155
'<' (60) 37
'=' (61) 58 79
'>' (62) 38
'?' (63) 55
'[' (91) 6 96 97
']' (93) 6 96 97
'^' (94) 47
'{' (123) 111 112 128
'|' (124) 49
'}' (125) 111 112 129 130 131 132 133 134 135 136
'~' (126) 24
error (256) 80 158
IDENTIFIER (258) 1 9 94 107 108
CONSTANT (259) 2
STRING_LITERAL (260) 3 122 123 125 126
SIZEOF (261) 18 19
PTR_OP (262)
INC_OP (263) 10 15
DEC_OP (264) 11 16
LEFT_OP (265) 34
RIGHT_OP (266) 35
LE_OP (267) 39
GE_OP (268) 40
EQ_OP (269) 42
NE_OP (270) 43
AND_OP (271) 51
OR_OP (272) 53
MUL_ASSIGN (273) 59
DIV_ASSIGN (274) 60
MOD_ASSIGN (275) 61
ADD_ASSIGN (276) 62
SUB_ASSIGN (277) 63
LEFT_ASSIGN (278) 64
RIGHT_ASSIGN (279) 65
AND_ASSIGN (280) 66
XOR_ASSIGN (281) 67
OR_ASSIGN (282) 68
TYPE_NAME (283) 90
TYPEDEF (284)
EXTERN (285)
STATIC (286)
AUTO (287)
REGISTER (288)
CHAR (289) 82
SHORT (290) 83
INT (291) 84
LONG (292) 85
SIGNED (293) 88
UNSIGNED (294) 89
FLOAT (295) 86
DOUBLE (296) 87
CONST (297)
VOLATILE (298)
VOID (299) 81
STRUCT (300)
UNION (301)
ENUM (302)
ELLIPSIS (303) 102
CASE (304)
DEFAULT (305)
IF (306) 146 147
ELSE (307) 147
SWITCH (308)
WHILE (309) 148 149
DO (310) 149
FOR (311) 151
GOTO (312)
CONTINUE (313)
BREAK (314)
RETURN (315) 154 155
T_printf (316) 122 123
T_scanf (317) 125 126
T_cin (318)
T_cout (319) 124
IFX (320)


Nonterminals, with rules where they appear

$accept (90)
    on left: 0
primary_expression (91)
    on left: 1 2 3 4, on right: 5
postfix_expression (92)
    on left: 5 6 7 8 9 10 11, on right: 6 7 8 9 10 11 14
argument_expression_list (93)
    on left: 12 13, on right: 8 13
unary_expression (94)
    on left: 14 15 16 17 18 19, on right: 15 16 17 18 26 27 28 29 57
unary_operator (95)
    on left: 20 21 22 23 24 25, on right: 17
multiplicative_expression (96)
    on left: 26 27 28 29, on right: 27 28 29 30 31 32
additive_expression (97)
    on left: 30 31 32, on right: 31 32 33 34 35
shift_expression (98)
    on left: 33 34 35, on right: 34 35 36 37 38 39 40
relational_expression (99)
    on left: 36 37 38 39 40, on right: 37 38 39 40 41 42 43
equality_expression (100)
    on left: 41 42 43, on right: 42 43 44 45
and_expression (101)
    on left: 44 45, on right: 45 46 47
exclusive_or_expression (102)
    on left: 46 47, on right: 47 48 49
inclusive_or_expression (103)
    on left: 48 49, on right: 49 50 51
logical_and_expression (104)
    on left: 50 51, on right: 51 52 53
logical_or_expression (105)
    on left: 52 53, on right: 53 54 55
conditional_expression (106)
    on left: 54 55, on right: 55 56 71
assignment_expression (107)
    on left: 56 57, on right: 12 13 57 69 70 110
assignment_operator (108)
    on left: 58 59 60 61 62 63 64 65 66 67 68, on right: 57
expression (109)
    on left: 69 70, on right: 4 6 55 70 142 144 146 147 148 149 153
    155
constant_expression (110)
    on left: 71, on right: 96
declaration (111)
    on left: 72 73, on right: 137 138 145 160
declaration_specifiers (112)
    on left: 74 75, on right: 72 73 75 105 106 161 162
init_declarator_list (113)
    on left: 76 77, on right: 73 77
init_declarator (114)
    on left: 78 79 80, on right: 76 77
type_specifier (115)
    on left: 81 82 83 84 85 86 87 88 89 90, on right: 74 75 91 92
specifier_qualifier_list (116)
    on left: 91 92, on right: 91 109
declarator (117)
    on left: 93, on right: 78 79 95 105 161 162 163 164
direct_declarator (118)
    on left: 94 95 96 97 98 99 100, on right: 93 96 97 98 99 100
parameter_type_list (119)
    on left: 101 102, on right: 98
parameter_list (120)
    on left: 103 104, on right: 101 102 104
parameter_declaration (121)
    on left: 105 106, on right: 103 104
identifier_list (122)
    on left: 107 108, on right: 99 108 123 126
type_name (123)
    on left: 109, on right: 19
initializer (124)
    on left: 110 111 112, on right: 79 113 114
initializer_list (125)
    on left: 113 114, on right: 111 112 114
statement (126)
    on left: 115 116 117 118 119 120 121, on right: 139 140 146 147
    148 149 152 153
print_statement (127)
    on left: 122 123 124, on right: 120
scan_statement (128)
    on left: 125 126, on right: 121
compound_statement (129)
    on left: 128, on right: 115 161 162 163 164
$@1 (130)
    on left: 127, on right: 128
temp1 (131)
    on left: 129 130 131 132 133 134 135 136, on right: 128
declaration_list (132)
    on left: 137 138, on right: 131 132 133 134 135 136 138 161 163
statement_list (133)
    on left: 139 140, on right: 130 132 133 134 135 136 140
expression_statement (134)
    on left: 141 142, on right: 116 152 153
for_expression_statement (135)
    on left: 143 144 145, on right: 152 153
selection_statement (136)
    on left: 146 147, on right: 117
iteration_statement (137)
    on left: 148 149 151, on right: 118
$@2 (138)
    on left: 150, on right: 151
temp2 (139)
    on left: 152 153, on right: 151
jump_statement (140)
    on left: 154 155, on right: 119
translation_unit (141)
    on left: 156 157 158, on right: 0 157
external_declaration (142)
    on left: 159 160, on right: 156 157
function_definition (143)
    on left: 161 162 163 164, on right: 159


State 0

    0 $accept: . translation_unit $end

    error       shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    TYPE_NAME   shift, and go to state 3
    CHAR        shift, and go to state 4
    SHORT       shift, and go to state 5
    INT         shift, and go to state 6
    LONG        shift, and go to state 7
    SIGNED      shift, and go to state 8
    UNSIGNED    shift, and go to state 9
    FLOAT       shift, and go to state 10
    DOUBLE      shift, and go to state 11
    VOID        shift, and go to state 12
    '('         shift, and go to state 13

    declaration             go to state 14
    declaration_specifiers  go to state 15
    type_specifier          go to state 16
    declarator              go to state 17
    direct_declarator       go to state 18
    translation_unit        go to state 19
    external_declaration    go to state 20
    function_definition     go to state 21


State 1

  158 translation_unit: error .

    $default  reduce using rule 158 (translation_unit)


State 2

   94 direct_declarator: IDENTIFIER .

    $default  reduce using rule 94 (direct_declarator)


State 3

   90 type_specifier: TYPE_NAME .

    $default  reduce using rule 90 (type_specifier)


State 4

   82 type_specifier: CHAR .

    $default  reduce using rule 82 (type_specifier)


State 5

   83 type_specifier: SHORT .

    $default  reduce using rule 83 (type_specifier)


State 6

   84 type_specifier: INT .

    $default  reduce using rule 84 (type_specifier)


State 7

   85 type_specifier: LONG .

    $default  reduce using rule 85 (type_specifier)


State 8

   88 type_specifier: SIGNED .

    $default  reduce using rule 88 (type_specifier)


State 9

   89 type_specifier: UNSIGNED .

    $default  reduce using rule 89 (type_specifier)


State 10

   86 type_specifier: FLOAT .

    $default  reduce using rule 86 (type_specifier)


State 11

   87 type_specifier: DOUBLE .

    $default  reduce using rule 87 (type_specifier)


State 12

   81 type_specifier: VOID .

    $default  reduce using rule 81 (type_specifier)


State 13

   95 direct_declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 2
    '('         shift, and go to state 13

    declarator         go to state 22
    direct_declarator  go to state 18


State 14

  160 external_declaration: declaration .

    $default  reduce using rule 160 (external_declaration)


State 15

   72 declaration: declaration_specifiers . ';'
   73            | declaration_specifiers . init_declarator_list ';'
  161 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  162                    | declaration_specifiers . declarator compound_statement

    error       shift, and go to state 23
    IDENTIFIER  shift, and go to state 2
    '('         shift, and go to state 13
    ';'         shift, and go to state 24

    init_declarator_list  go to state 25
    init_declarator       go to state 26
    declarator            go to state 27
    direct_declarator     go to state 18


State 16

   74 declaration_specifiers: type_specifier .
   75                       | type_specifier . declaration_specifiers

    TYPE_NAME  shift, and go to state 3
    CHAR       shift, and go to state 4
    SHORT      shift, and go to state 5
    INT        shift, and go to state 6
    LONG       shift, and go to state 7
    SIGNED     shift, and go to state 8
    UNSIGNED   shift, and go to state 9
    FLOAT      shift, and go to state 10
    DOUBLE     shift, and go to state 11
    VOID       shift, and go to state 12

    $default  reduce using rule 74 (declaration_specifiers)

    declaration_specifiers  go to state 28
    type_specifier          go to state 16


State 17

  163 function_definition: declarator . declaration_list compound_statement
  164                    | declarator . compound_statement

    TYPE_NAME  shift, and go to state 3
    '{'        shift, and go to state 29
    CHAR       shift, and go to state 4
    SHORT      shift, and go to state 5
    INT        shift, and go to state 6
    LONG       shift, and go to state 7
    SIGNED     shift, and go to state 8
    UNSIGNED   shift, and go to state 9
    FLOAT      shift, and go to state 10
    DOUBLE     shift, and go to state 11
    VOID       shift, and go to state 12

    declaration             go to state 30
    declaration_specifiers  go to state 31
    type_specifier          go to state 16
    compound_statement      go to state 32
    declaration_list        go to state 33


State 18

   93 declarator: direct_declarator .
   96 direct_declarator: direct_declarator . '[' constant_expression ']'
   97                  | direct_declarator . '[' ']'
   98                  | direct_declarator . '(' parameter_type_list ')'
   99                  | direct_declarator . '(' identifier_list ')'
  100                  | direct_declarator . '(' ')'

    '('  shift, and go to state 34
    '['  shift, and go to state 35

    $default  reduce using rule 93 (declarator)


State 19

    0 $accept: translation_unit . $end
  157 translation_unit: translation_unit . external_declaration

    $end        shift, and go to state 36
    IDENTIFIER  shift, and go to state 2
    TYPE_NAME   shift, and go to state 3
    CHAR        shift, and go to state 4
    SHORT       shift, and go to state 5
    INT         shift, and go to state 6
    LONG        shift, and go to state 7
    SIGNED      shift, and go to state 8
    UNSIGNED    shift, and go to state 9
    FLOAT       shift, and go to state 10
    DOUBLE      shift, and go to state 11
    VOID        shift, and go to state 12
    '('         shift, and go to state 13

    declaration             go to state 14
    declaration_specifiers  go to state 15
    type_specifier          go to state 16
    declarator              go to state 17
    direct_declarator       go to state 18
    external_declaration    go to state 37
    function_definition     go to state 21


State 20

  156 translation_unit: external_declaration .

    $default  reduce using rule 156 (translation_unit)


State 21

  159 external_declaration: function_definition .

    $default  reduce using rule 159 (external_declaration)


State 22

   95 direct_declarator: '(' declarator . ')'

    ')'  shift, and go to state 38


State 23

   80 init_declarator: error .

    $default  reduce using rule 80 (init_declarator)


State 24

   72 declaration: declaration_specifiers ';' .

    $default  reduce using rule 72 (declaration)


State 25

   73 declaration: declaration_specifiers init_declarator_list . ';'
   77 init_declarator_list: init_declarator_list . ',' init_declarator

    ','  shift, and go to state 39
    ';'  shift, and go to state 40


State 26

   76 init_declarator_list: init_declarator .

    $default  reduce using rule 76 (init_declarator_list)


State 27
